Edited wiki page January through web user interface.

--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -64,7 +64,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || louisfulton || Kit || || Paid || ||
 || ||  gt1485a || Kit || || Paid || ||
 || || wigthft || Built || RGB LCD Built - EV Sim || || ||
-|| || jackncoke72 || Built || || || ||
+|| || jackncoke72 || Built || || Paid || ||
 || || 3400broadway || Built || LCD Built || || ||
 || ||  bikekite || || || || ||
 || || ellweber || Built|| RGB LCD RTC Built - EV Sim || Paid || ||
