Edited wiki page OpenEVSE_Plus_spec through web user interface.

--- a/wiki/OpenEVSE_Plus_spec.wiki
+++ b/wiki/OpenEVSE_Plus_spec.wiki
@@ -3,6 +3,7 @@
 = Introduction =
 The OpenEVSE Plus board contains a J1772 compliant controller board as well as a 4W switch mode power supply.
 
+OpenEVSE Plus v1 Board connections
 http://farm9.staticflickr.com/8202/8213353962_08818e80b6.jpg
 
 *OpenEVSE Plus Kit*
