Edited wiki page sidebar through web user interface.

--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -4,6 +4,7 @@
     * [OpenEVSE_boards OpenEVSE boards]
     * [OpenEVSE_Compatibility Compatibility]
     * [OpenEVSE_Plus_spec OpenEVSE PLUS]
+    * [OpenEVSE_LCD_spec RGB LCD]
   * *EVSE Charging Stations*
     * [Open_EVSEs EVSE Example Pictures]
     * [EVSE_by_mwolrich 30A portable EVSE by mwolrich]
