Edited wiki page OpenEVSE_Plus_spec through web user interface.

--- a/wiki/OpenEVSE_Plus_spec.wiki
+++ b/wiki/OpenEVSE_Plus_spec.wiki
@@ -47,5 +47,4 @@ Finally solder the Power Supply.
 
 http://farm9.staticflickr.com/8333/8421725538_1f0b3685fa_n.jpg
 
-Follow the Test procedure here: 
-
+Follow the Test procedure here: http://code.google.com/p/open-evse/wiki/EVSE_TESTING
