--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -30,7 +30,7 @@ Payment via paypal to chris1howell83@gmail.com
 || 5 || pjtiger35 || || || || ||
 || 6 || mrpilotron ~ || Kit || RGB LCD kit || Paid || Shipped 1/21 ||
 || 7 || jallison1 || Kit || RGB LCD Kit || Paid || Shipped 1/21 ||
-|| 8 || alex.PTSbackup || Built || EVsim || Paid || ||
+|| 8 || alex.PTSbackup || Built || EVsim || Paid || Picked up ||
 || 9 || Bloomer57 || || || || ||
 || 10 || bela.okmyx || Built || RGB LCD built || Paid || Shipped 1/22 ||
 || 11 || mwyatt1604 || || || || ||
@@ -42,8 +42,7 @@ Payment via paypal to chris1howell83@gmail.com
 || 17 || robot256 || Kit || Kit || Paid || ||
 || 18 || kao.russell || Built || RGB Kit || Paid || ||
 || 19 || Eric Ruhl  || Built || RGB LCD Built|| Paid || ||
-|| 20 || vcrllc || || || || ||
-|| || 2johnbooker || Built || || Paid || ||
+|| 20 || 2johnbooker || Built || || Paid || ||
 || || Sven.Leser || Built || RGB LCD Built - Int Ship || Paid || ||
 || || ClintonEFisher || Kit || EV Sim || Paid || Shipped 1/21 ||
 || ||  davemco3 ~ || Built  || RGB LCD rtc Built - EV Sim || Paid || ||
