Edited wiki page January through web user interface.

--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -77,3 +77,4 @@ Payment via paypal to chris1howell83@gmail.com
 || || jebork || Built || RGB LCD Built - EV Sim || Paid || ||
 || || dlrodd || Built|| RGB LCD RTC Built - EV Sim || || ||
 || || derekdebu || Built || || || ||
+|| ||  llMGAll || Built || RGB LCD Built || Paid || ||
