Edited wiki page January through web user interface.

--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -77,4 +77,5 @@ Payment via paypal to chris1howell83@gmail.com
 || || jebork || Built || RGB LCD Built - EV Sim || Paid || ||
 || || dlrodd || Built|| RGB LCD RTC Built - EV Sim || || ||
 || || derekdebu || Built || || || ||
-|| ||  llMGAll || Built || RGB LCD Built || Paid || ||
+|| ||  llMGAll || Built || RGB LCD RTC Built || Paid || ||
+|| ||  troy.varela || Built || RBG LDC RTC Built || || ||
