--- a/wiki/OpenEVSE_Plus_spec.wiki
+++ b/wiki/OpenEVSE_Plus_spec.wiki
@@ -19,9 +19,9 @@ The OpenEVSE Plus J1772 controller board kit comes with all the surface mount pa
 
 =Building the Kit=
 
-All through hole parts are places on the opposite side as the surface mount components. The board has markings to identify the parts and correct placement.
+All through hole parts are placed on the opposite side as the surface mount components, but soldered on the same side as the surface mounts. The board has markings to identify the parts and correct placement.
 
-Take care not to touch existing components with the soldering iron. position board so soldering can occur without interference with other parts.
+Take care not to touch existing components with the soldering iron. Position board so soldering can occur without interference with other parts.
 
 http://farm9.staticflickr.com/8192/8421733534_a6e8487ee7_n.jpg
 
