--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -23,7 +23,7 @@
     * [AVRDUDE Load Firmware with AVRDude]
     * [AdaFruitRGBdisplay Add a display]
     * [MaxCurrent Set Default Current]
-    * [AssemblePlusV2 Assemble the EVSE Plus V2 kit]
+    * [AssemblePlusV2 Build EVSE Plus V2 kit]
   * *Do it Yourself*
     * [OpenEVSEv1partslist Parts list to DIY V1]
     * [OpenEVSEv2partslist Parts list for DIY V2]
