--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -18,6 +18,8 @@
   * *SAE J1772 Standard*
     * [J1772Basics Basics of J1772]
     * [J1772CableSources Sources for J1772 cables]
+  * *Frequently Asked Questions*
+    * [FAQ FAQ]
   * *How to...*
     * [LoadingFirmware Load Firmware with Arduino IDE]
     * [AVRDUDE Load Firmware with AVRDude]
