Edited wiki page sidebar through web user interface.

--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -8,6 +8,7 @@
   * *EVSE Charging Stations*
     * [Open_EVSEs EVSE Example Pictures]
     * [OpenEVSE_Workshop OpenEVSE Plus Workshop 30A]
+    * [AssemblePlusV2 30A EVSE by mrpilotron]
     * [EVSE_by_mwolrich 30A portable EVSE by mwolrich]
     * [EVSE_by_thinwing EVSE by thinwing]
     * [EVSE_EV_ChargeAmerica_Upgrade Rebuild of broken EVCA EVSE]
