--- a/wiki/OpenEVSE_LCD_spec.wiki
+++ b/wiki/OpenEVSE_LCD_spec.wiki
@@ -6,7 +6,7 @@ http://farm9.staticflickr.com/8351/8406326627_f12743981f.jpg
 
 LCD Boards are now avaliable designed specificly for OpenEVSE. They were designed to be very compact and easy to interface. The OpenEVSE LCD boards support RGB LCDs and are avaliable with or without a RTC(Real Time Clock) to add timer based functionality. 
 
-The OpenEVSE RGB LCD is based on and compatible with the AdaFruit RGB LCD Arduino shield and for OpenEVSE uses the LiquitTWI2 library by lincomatic. 
+The OpenEVSE RGB LCD is based on and compatible with the Adafruit RGB LCD Arduino shield and for OpenEVSE uses the LiquitTWI2 library by lincomatic. 
 
 The optional RTC is based on the DS3231 ultra-precice temperature compensated RTC. 
 
@@ -17,10 +17,16 @@ When soldering, be sure to have the included plastic spacers in place to establi
 The ribbon cable goes from the 4-wire header to the i2c header on the Open EVSE board. Be sure to pay attention to which side is ground on both ends. The ground pin has a square copper solder pad around it for easy identification.
 
 There are 5 holes labeled S-R-D-U-L. These are for the control button.
+
 S - Select - Supported by OpenEVSE button Menu
+
 R - Right - Not currently used
+
 D - Down - Not currently used
+
 U - Up - Not currently used
-L - Left - Not currently used 
+
+L - Left - Not currently used
+ 
 
 To enable the button on the LCD solder a wire (not included in kit) to the S - Select hole and another wire to any of the ground holes. Connect to a normaly Open momentary button. A lit button can be connected using Ground, +5v and Select.
