--- a/wiki/OpenEVSE_Compatibility.wiki
+++ b/wiki/OpenEVSE_Compatibility.wiki
@@ -7,17 +7,15 @@ OpenEVSE was designed to be fully compliant with the J1772:2010 Standard and sho
 = Vehicles Tested =
 OpenEVSE has been tested with:
 || Year || Make || Model || Car Specific Features || Onboard Charger || Known Issues ||
-|| 2011 - 2012 || Nissan || LEAF || Timers - Supported || 3.3kW - 16A @ 240V || None ||
-|| 2011 - 2013 || Chevy || VOLT || Timers - Supported || 3.3kW - 16A @ 240V || None ||
-|| 2012 || Toyota|| PiP || Timers - Supported || 2.8kW - 12A @ 240V || None ||
-|| 2012 || Mitsubishi || i-MiEV || || 3.3kW - 16A @ 240V || None ||
-|| 2012 || Ford || Focus || || 6.6kw - 30A @ 240V || None ||
+|| All || Nissan || LEAF || Timers - Supported || 3.3kW - 16A @ 240V || None ||
+|| All || Chevy || VOLT || Timers - Supported || 3.3kW - 16A @ 240V || None ||
+|| All || Toyota|| PiP || Timers - Supported || 2.8kW - 12A @ 240V || None ||
+|| All || Mitsubishi || i-MiEV || || 3.3kW - 16A @ 240V || None ||
+|| All || Ford || Focus EV || || 6.6kw - 30A @ 240V || None ||
 || 2013 || Ford || C-Max Energi || Timers - Supported || 3.3kW - 16A @ 240V || None ||
 || 2013 || Honda || Fit || || 6.6kw - 30A @ 240V || None ||
-|| 1.5 || Tesla || Roadster || with J1772 adapter || 16.8kW - 70A @ 240V || requires mod to R1 for pre-v7 boards ||
-|| 2.0 || Tesla || Roadster || with J1772 adapter || 16.8kW - 70A @ 240V || requires mod to R1 for pre-v7 boards ||
-|| 2.5 || Tesla || Roadster || with J1772 adapter || 16.8kW - 70A @ 240V || requires mod to R1 for pre-v7 boards ||
-||2012|| Tesla || Model S || with J1772 adapter || 10kW - 40A @ 240V or 20kw - 80A @ 240V || requires mod to R1 for pre-v7 boards ||
+|| All || Tesla || Roadster || with J1772 adapter || 16.8kW - 70A @ 240V || requires mod to R1 for pre-v7 boards ||
+|| All || Tesla || Model S || with J1772 adapter || 10kW - 40A @ 240V or 20kw - 80A @ 240V || requires mod to R1 for pre-v7 boards ||
 
 
 If you have tested OpenEVSE on other vehicles please send a compatibility report to chris1howell83@gmail.com...
